--- a/escamboapp/Gemfile
+++ b/escamboapp/Gemfile
@@ -14,7 +14,13 @@ gem 'devise-i18n'
 #Rails gem of the Bootstrap based admin theme SB Admin 2.
 gem 'bootstrap_sb_admin_base_v2'
 
-gem 'rails-assets-bootstrap', '3.3.7', source: 'https://rails-assets.org'
+source 'https://rails-assets.org' do
+  gem 'rails-assets-bootstrap', '3.3.7'
+  #NotifyJS
+  gem 'rails-assets-notifyjs'
+  #BootboxJS
+  gem 'rails-assets-bootbox'
+end
 
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
@@ -55,6 +61,8 @@ group :development, :test do
 end
 
 group :development do
+  #library used to generate faker emails
+  gem "faker"
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
 
