improve the update method in admin controller and fix the active record

--- a/escamboapp/Gemfile
+++ b/escamboapp/Gemfile
@@ -13,6 +13,8 @@ gem 'devise'
 gem 'devise-i18n'
 #Rails gem of the Bootstrap based admin theme SB Admin 2.
 gem 'bootstrap_sb_admin_base_v2'
+#
+gem 'enum_help'
 
 source 'https://rails-assets.org' do
   gem 'rails-assets-bootstrap', '3.3.7'
