--- a/escamboapp/Gemfile
+++ b/escamboapp/Gemfile
@@ -21,6 +21,8 @@ gem 'pundit'
 gem 'money-rails'
 #
 gem 'paperclip', '~> 5.0.0'
+#jQuery UI for the Rails asset pipeline
+gem 'jquery-ui-rails'
 
 source 'https://rails-assets.org' do
   gem 'rails-assets-bootstrap', '3.3.7'
